Blog title text color contrast fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@
 
 [data-theme="dark"] {
   --background: #282e53;
-  --main-text: #121212;
+  --main-text: #C0BAD9;
 
   --secondary-text: #121212;
   --secondary-background: #ae7cb6;
